[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Backgrounds/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/buttons/exitBtn.png" type="Texture" id=2]
[ext_resource path="res://Assets/buttons/adBtn.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/Angeme-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Backgrounds/spongebob-house-627x43myjnudtc21.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/Backgrounds/bikini-bottom_background.jpg" type="Texture" id=6]
[ext_resource path="res://Assets/buttons/btnPng2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Backgrounds/jellyBackground.png" type="Texture" id=8]
[ext_resource path="res://Menu/ShopScene/Shop.gd" type="Script" id=9]
[ext_resource path="res://Assets/audios/muzyka-iz-multfilma-spanch-gubka-bob-kvadratnye-shtany.mp3" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 51
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 29
use_filter = true
font_data = ExtResource( 4 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.8, 0.833333 )
texture = ExtResource( 1 )

[node name="Spongebob-house-627X43Myjnudtc21" type="Sprite" parent="background"]
position = Vector2( 150, -33.5999 )
scale = Vector2( 0.0735677, 0.113889 )
texture = ExtResource( 5 )

[node name="MenuBackground" type="Sprite" parent="background"]
position = Vector2( -150, -254.4 )
scale = Vector2( 0.117188, 0.206667 )
texture = ExtResource( 1 )

[node name="JellyBackground" type="Sprite" parent="background"]
position = Vector2( 150, -254.4 )
scale = Vector2( 0.104775, 0.180278 )
texture = ExtResource( 8 )

[node name="Bikini-bottomBackground" type="Sprite" parent="background"]
position = Vector2( -150, -33.6001 )
scale = Vector2( 0.0677084, 0.121111 )
texture = ExtResource( 6 )

[node name="buttons" type="Node2D" parent="."]

[node name="stdBackBtn" type="TouchScreenButton" parent="buttons"]
position = Vector2( 304, 128 )
scale = Vector2( 0.586667, 0.4 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="jellyBackBtn" type="TouchScreenButton" parent="buttons"]
position = Vector2( 544, 136 )
scale = Vector2( 0.56, 0.346667 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="BikinnyBackBtn" type="TouchScreenButton" parent="buttons"]
position = Vector2( 296, 304 )
scale = Vector2( 0.586667, 0.426667 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="spongeBackBtn" type="TouchScreenButton" parent="buttons"]
position = Vector2( 544, 304 )
scale = Vector2( 0.573334, 0.426667 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="adBtn" type="TouchScreenButton" parent="buttons"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 584, 432 )
scale = Vector2( 0.157815, 0.198758 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )

[node name="exitBtn" type="TouchScreenButton" parent="buttons"]
position = Vector2( 328, 440 )
scale = Vector2( 0.776119, 0.705882 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="buttons"]
margin_left = 320.0
margin_top = 168.0
margin_right = 466.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
text = "Купить"

[node name="Label2" type="Label" parent="buttons"]
margin_left = 560.0
margin_top = 168.0
margin_right = 706.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
text = "Купить"

[node name="Label3" type="Label" parent="buttons"]
margin_left = 320.0
margin_top = 344.0
margin_right = 466.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 1 )
text = "Купить"

[node name="Label4" type="Label" parent="buttons"]
margin_left = 560.0
margin_top = 344.0
margin_right = 706.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 1 )
text = "Купить"

[node name="coinText" type="Label" parent="."]
margin_left = 24.0
margin_top = 8.0
margin_right = 291.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 2 )
text = "Монеты: "

[node name="Label" type="Label" parent="."]
margin_left = 520.0
margin_top = 528.0
margin_right = 811.0
margin_bottom = 567.0
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Получи +30 Монет"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[connection signal="pressed" from="buttons/stdBackBtn" to="." method="_on_stdBackBtn_pressed"]
[connection signal="pressed" from="buttons/jellyBackBtn" to="." method="_on_jellyBackBtn_pressed"]
[connection signal="pressed" from="buttons/BikinnyBackBtn" to="." method="_on_BikinnyBackBtn_pressed"]
[connection signal="pressed" from="buttons/spongeBackBtn" to="." method="_on_spongeBackBtn_pressed"]
[connection signal="pressed" from="buttons/adBtn" to="." method="adBtn_pressed"]
[connection signal="pressed" from="buttons/exitBtn" to="." method="exitBtn_pressed"]
